Ansys import ready
Signed-off-by: Daniel Kreuter <DanielChristopher.Kreuter@de.bosch.com>

--- a/demos/FEM_io.ipynb
+++ b/demos/FEM_io.ipynb
@@ -947,20 +947,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dtype('O')"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# calculate the stress gradient\n",
     "ansys_df['mises'] = ansys_df.equistress.mises()"
@@ -968,32 +957,325 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>S11</th>\n",
+       "      <th>S22</th>\n",
+       "      <th>S33</th>\n",
+       "      <th>S12</th>\n",
+       "      <th>S23</th>\n",
+       "      <th>S13</th>\n",
+       "      <th>mises</th>\n",
+       "      <th>dx</th>\n",
+       "      <th>dy</th>\n",
+       "      <th>dz</th>\n",
+       "      <th>gradient_abs</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>element_id</th>\n",
+       "      <th>node_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9686</th>\n",
+       "      <th>5921</th>\n",
+       "      <td>-4.500000</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.055999</td>\n",
+       "      <td>-0.027743</td>\n",
+       "      <td>-2.556435</td>\n",
+       "      <td>0.365905</td>\n",
+       "      <td>3.092182</td>\n",
+       "      <td>-0.929771</td>\n",
+       "      <td>6.188126</td>\n",
+       "      <td>1.078354</td>\n",
+       "      <td>-2.982158</td>\n",
+       "      <td>4.436726</td>\n",
+       "      <td>9.445737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9687</th>\n",
+       "      <th>5921</th>\n",
+       "      <td>-4.500000</td>\n",
+       "      <td>-0.6</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.055999</td>\n",
+       "      <td>-0.027743</td>\n",
+       "      <td>-2.556435</td>\n",
+       "      <td>0.365905</td>\n",
+       "      <td>3.092182</td>\n",
+       "      <td>-0.929771</td>\n",
+       "      <td>6.188126</td>\n",
+       "      <td>1.078354</td>\n",
+       "      <td>-2.982158</td>\n",
+       "      <td>4.436726</td>\n",
+       "      <td>9.445737</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9688</th>\n",
+       "      <th>5922</th>\n",
+       "      <td>-4.500000</td>\n",
+       "      <td>-0.2</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>0.021350</td>\n",
+       "      <td>-0.016056</td>\n",
+       "      <td>-0.844268</td>\n",
+       "      <td>0.742184</td>\n",
+       "      <td>4.671668</td>\n",
+       "      <td>-0.220989</td>\n",
+       "      <td>8.245652</td>\n",
+       "      <td>0.593039</td>\n",
+       "      <td>-3.856678</td>\n",
+       "      <td>4.437075</td>\n",
+       "      <td>10.234250</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9689</th>\n",
+       "      <th>5923</th>\n",
+       "      <td>-4.500000</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>-0.021172</td>\n",
+       "      <td>0.015592</td>\n",
+       "      <td>0.844829</td>\n",
+       "      <td>0.742229</td>\n",
+       "      <td>4.671950</td>\n",
+       "      <td>0.220545</td>\n",
+       "      <td>8.246177</td>\n",
+       "      <td>0.101032</td>\n",
+       "      <td>-4.699875</td>\n",
+       "      <td>4.467224</td>\n",
+       "      <td>11.232337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9690</th>\n",
+       "      <th>5924</th>\n",
+       "      <td>-4.500000</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>0.500000</td>\n",
+       "      <td>-0.055799</td>\n",
+       "      <td>0.028506</td>\n",
+       "      <td>2.555722</td>\n",
+       "      <td>0.365712</td>\n",
+       "      <td>3.092072</td>\n",
+       "      <td>0.929897</td>\n",
+       "      <td>6.187494</td>\n",
+       "      <td>-0.251058</td>\n",
+       "      <td>-5.377006</td>\n",
+       "      <td>4.514584</td>\n",
+       "      <td>12.168405</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9786</th>\n",
+       "      <th>7303</th>\n",
+       "      <td>0.512436</td>\n",
+       "      <td>-1.0</td>\n",
+       "      <td>8.215762</td>\n",
+       "      <td>-3.163776</td>\n",
+       "      <td>-0.007943</td>\n",
+       "      <td>-27.196525</td>\n",
+       "      <td>0.043157</td>\n",
+       "      <td>0.088704</td>\n",
+       "      <td>4.807310</td>\n",
+       "      <td>27.069088</td>\n",
+       "      <td>22.907678</td>\n",
+       "      <td>18.521724</td>\n",
+       "      <td>0.995569</td>\n",
+       "      <td>51.053124</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9787</th>\n",
+       "      <th>7294</th>\n",
+       "      <td>0.101185</td>\n",
+       "      <td>-0.2</td>\n",
+       "      <td>7.991210</td>\n",
+       "      <td>-1.011787</td>\n",
+       "      <td>-0.076964</td>\n",
+       "      <td>-4.099985</td>\n",
+       "      <td>0.154397</td>\n",
+       "      <td>4.653870</td>\n",
+       "      <td>0.224506</td>\n",
+       "      <td>8.859799</td>\n",
+       "      <td>28.622802</td>\n",
+       "      <td>10.686431</td>\n",
+       "      <td>2.596182</td>\n",
+       "      <td>53.109456</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9788</th>\n",
+       "      <th>7295</th>\n",
+       "      <td>0.101185</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>7.991210</td>\n",
+       "      <td>1.011786</td>\n",
+       "      <td>0.077210</td>\n",
+       "      <td>4.099997</td>\n",
+       "      <td>0.154386</td>\n",
+       "      <td>4.653859</td>\n",
+       "      <td>-0.224518</td>\n",
+       "      <td>8.859717</td>\n",
+       "      <td>29.495579</td>\n",
+       "      <td>3.152003</td>\n",
+       "      <td>2.890316</td>\n",
+       "      <td>51.622036</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9789</th>\n",
+       "      <th>7296</th>\n",
+       "      <td>0.101185</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>7.991210</td>\n",
+       "      <td>3.090905</td>\n",
+       "      <td>0.080025</td>\n",
+       "      <td>12.487827</td>\n",
+       "      <td>0.132794</td>\n",
+       "      <td>3.120599</td>\n",
+       "      <td>-0.681461</td>\n",
+       "      <td>12.502841</td>\n",
+       "      <td>88.489426</td>\n",
+       "      <td>-120.046143</td>\n",
+       "      <td>-1.132924</td>\n",
+       "      <td>258.318051</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9790</th>\n",
+       "      <th>10949</th>\n",
+       "      <td>0.101185</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>7.991210</td>\n",
+       "      <td>5.063938</td>\n",
+       "      <td>0.048239</td>\n",
+       "      <td>21.043001</td>\n",
+       "      <td>0.013461</td>\n",
+       "      <td>0.172163</td>\n",
+       "      <td>-1.165195</td>\n",
+       "      <td>19.099643</td>\n",
+       "      <td>48.677615</td>\n",
+       "      <td>4.370860</td>\n",
+       "      <td>0.890181</td>\n",
+       "      <td>84.665348</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>78380 rows × 14 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "Int64Index([5921, 11315, 11713, 12325, 7645, 11711, 11712, 12398], dtype='int64', name='node_id')"
+       "                           x    y         z       S11       S22        S33  \\\n",
+       "element_id node_id                                                           \n",
+       "9686       5921    -4.500000 -0.6  0.500000  0.055999 -0.027743  -2.556435   \n",
+       "9687       5921    -4.500000 -0.6  0.500000  0.055999 -0.027743  -2.556435   \n",
+       "9688       5922    -4.500000 -0.2  0.500000  0.021350 -0.016056  -0.844268   \n",
+       "9689       5923    -4.500000  0.2  0.500000 -0.021172  0.015592   0.844829   \n",
+       "9690       5924    -4.500000  0.6  0.500000 -0.055799  0.028506   2.555722   \n",
+       "...                      ...  ...       ...       ...       ...        ...   \n",
+       "9786       7303     0.512436 -1.0  8.215762 -3.163776 -0.007943 -27.196525   \n",
+       "9787       7294     0.101185 -0.2  7.991210 -1.011787 -0.076964  -4.099985   \n",
+       "9788       7295     0.101185  0.2  7.991210  1.011786  0.077210   4.099997   \n",
+       "9789       7296     0.101185  0.6  7.991210  3.090905  0.080025  12.487827   \n",
+       "9790       10949    0.101185  1.0  7.991210  5.063938  0.048239  21.043001   \n",
+       "\n",
+       "                         S12       S23       S13      mises         dx  \\\n",
+       "element_id node_id                                                       \n",
+       "9686       5921     0.365905  3.092182 -0.929771   6.188126   1.078354   \n",
+       "9687       5921     0.365905  3.092182 -0.929771   6.188126   1.078354   \n",
+       "9688       5922     0.742184  4.671668 -0.220989   8.245652   0.593039   \n",
+       "9689       5923     0.742229  4.671950  0.220545   8.246177   0.101032   \n",
+       "9690       5924     0.365712  3.092072  0.929897   6.187494  -0.251058   \n",
+       "...                      ...       ...       ...        ...        ...   \n",
+       "9786       7303     0.043157  0.088704  4.807310  27.069088  22.907678   \n",
+       "9787       7294     0.154397  4.653870  0.224506   8.859799  28.622802   \n",
+       "9788       7295     0.154386  4.653859 -0.224518   8.859717  29.495579   \n",
+       "9789       7296     0.132794  3.120599 -0.681461  12.502841  88.489426   \n",
+       "9790       10949    0.013461  0.172163 -1.165195  19.099643  48.677615   \n",
+       "\n",
+       "                            dy        dz  gradient_abs  \n",
+       "element_id node_id                                      \n",
+       "9686       5921      -2.982158  4.436726      9.445737  \n",
+       "9687       5921      -2.982158  4.436726      9.445737  \n",
+       "9688       5922      -3.856678  4.437075     10.234250  \n",
+       "9689       5923      -4.699875  4.467224     11.232337  \n",
+       "9690       5924      -5.377006  4.514584     12.168405  \n",
+       "...                        ...       ...           ...  \n",
+       "9786       7303      18.521724  0.995569     51.053124  \n",
+       "9787       7294      10.686431  2.596182     53.109456  \n",
+       "9788       7295       3.152003  2.890316     51.622036  \n",
+       "9789       7296    -120.046143 -1.132924    258.318051  \n",
+       "9790       10949      4.370860  0.890181     84.665348  \n",
+       "\n",
+       "[78380 rows x 14 columns]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ansys_df.loc[9686].index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "grad = ansys_df.gradient.gradient_of('mises')\n",
-    "display(grad)"
+    "grad[\"gradient_abs\"]=np.linalg.norm(grad, axis=1)\n",
+    "ansys_df = ansys_df.join(grad)\n",
+    "ansys_df"
    ]
   },
   {
