Branched from robin test
Signed-off-by: Gyongyver Kiss <gyongyver.kiss@hu.bosch.com>

--- a/demos/VMAP_io.ipynb
+++ b/demos/VMAP_io.ipynb
@@ -56,7 +56,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "vm_mesh.mesh_coords(\"1\")"
+    "#vm_mesh.mesh_coords(\"1\")"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "               .join_variable('STRESS_CAUCHY')\n",
     "               .join_variable('DISPLACEMENT')\n",
     "               .to_frame())\n",
-    "pyLife_mesh.sample(10)"
+    "pyLife_mesh."
    ]
   },
   {
