--- a/demos/FEM_io.ipynb
+++ b/demos/FEM_io.ipynb
@@ -162,7 +162,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "result = pymapdl_reader.read_binary('beam.rst')\n",
+    "result = pymapdl_reader.read_binary('beam_3d.rst')\n",
     "elem_df = pd.DataFrame(result.mesh.elem).iloc[:,10:]\n",
     "elem_df[\"element_id\"] = pd.DataFrame(result.mesh.elem).iloc[:,8]\n",
     "index_mesh = pd.DataFrame(index=pd.MultiIndex.from_frame(\n",
@@ -265,7 +265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   },
   "name": "VMAP_io.ipynb"
  },
