Add materiallaws to documentation
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/ramberg_osgood.ipynb
+++ b/demos/ramberg_osgood.ipynb
@@ -4,8 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ramberg Osgood relation\n",
-    "\n",
+    "# Ramberg Osgood relation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The `RambGood` module allows you to easily calculate stress strain curves and stress strain hytesresis loops using the Ramberg Osgood relation starting from the Hollomon parameters and Young's modulus of a material."
    ]
   },
