Use pyvista ans ipygany for meshplots
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/hotspot_plate.ipynb
+++ b/demos/hotspot_plate.ipynb
@@ -2,12 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Hotspot calculation demo\n"
    ]
@@ -36,7 +31,10 @@
     "import pylife.mesh.hotspot\n",
     "import pylife.vmap\n",
     "\n",
-    "import pyvista as pv\n"
+    "import pyvista as pv\n",
+    "\n",
+    "pv.set_plot_theme('document')\n",
+    "pv.set_jupyter_backend('ipygany')"
    ]
   },
   {
@@ -106,7 +104,7 @@
     "pyLife_nodes = pyLife_mesh.groupby('node_id').mean()\n",
     "mesh = pv.PolyData(pyLife_nodes[['x', 'y', 'z']].values)\n",
     "mesh.point_arrays[\"hotspot\"] = pyLife_nodes[\"hotspot\"].values\n",
-    "mesh.plot(scalars=\"hotspot\",log_scale = False)"
+    "mesh.plot(scalars=\"hotspot\",log_scale = False, off_screen=True)"
    ]
   },
   {
