--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -73,7 +73,10 @@
     "# mpl.style.use('seaborn')\n",
     "# mpl.style.use('seaborn-notebook')\n",
     "mpl.style.use('bmh')\n",
-    "%matplotlib inline"
+    "%matplotlib inline\n",
+    "\n",
+    "pv.set_plot_theme('document')\n",
+    "pv.set_jupyter_backend('ipygany')"
    ]
   },
   {
