--- a/demos/VMAP_io.ipynb
+++ b/demos/VMAP_io.ipynb
@@ -2,12 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Stress gradient calculation\n",
     "\n",
@@ -26,17 +21,15 @@
     "import pandas as pd\n",
     "import pylife.vmap\n",
     "import pylife.stress.equistress\n",
-    "import pyvista as pv"
+    "import pyvista as pv\n",
+    "\n",
+    "pv.set_plot_theme('document')\n",
+    "pv.set_jupyter_backend('ipygany')"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "source": [
     "Read in demo data and add the stress tensor dimensions for the third dimension."
    ]
@@ -55,9 +48,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "vm_mesh.mesh_coords(\"1\")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -97,7 +88,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyvista import examples\n",
+    "nodes = pyLife_mesh.groupby('node_id').first()[['x', 'y', 'z']]\n",
+    "\n",
+    "connectivity ="
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
     "pyLife_nodes = pyLife_mesh.groupby('node_id').mean()\n",
     "mesh = pv.PolyData(pyLife_nodes[['x', 'y', 'z']].values)\n",
     "mesh.point_arrays[\"mises\"] = pyLife_nodes[\"mises\"].values\n",
