Some cleanups regarding docs building
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/VMAP_io.ipynb
+++ b/demos/VMAP_io.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Stress gradient calculation\n",
+    "# VMAP IO Demo\n",
     "\n",
     "This demo shows the stress gradient calculation module. A gradient is calculated by fitting a plane into a node and its neighbor nodes of an FEM mesh.\n",
     "\n",
@@ -88,19 +88,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "nodes = pyLife_mesh.groupby('node_id').first()[['x', 'y', 'z']]\n",
     "\n",
-    "connectivity ="
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "pyLife_nodes = pyLife_mesh.groupby('node_id').mean()\n",
+    "pyLife_nodes = pyLife_mesh[['x', 'y', 'z', 'mises']].groupby('node_id').mean()\n",
     "mesh = pv.PolyData(pyLife_nodes[['x', 'y', 'z']].values)\n",
     "mesh.point_arrays[\"mises\"] = pyLife_nodes[\"mises\"].values\n",
     "mesh.plot(scalars=\"mises\")"
@@ -123,15 +112,6 @@
     "pl = pv.PlotterITK()\n",
     "pl.add_mesh(mesh, scalars=\"mises\", smooth_shading=True)\n",
     "pl.show(True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pv.plot_itk(mesh, scalars=\"mises\")"
    ]
   },
   {
