--- a/demos/hotspot_plate.ipynb
+++ b/demos/hotspot_plate.ipynb
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "# plotting using pyvista\n",
-    "pyLife_nodes = pyLife_mesh.groupby('node_id').mean()\n",
+    "pyLife_nodes = pyLife_mesh[['x', 'y', 'z', 'hotspot']].groupby('node_id').mean()\n",
     "mesh = pv.PolyData(pyLife_nodes[['x', 'y', 'z']].values)\n",
     "mesh.point_arrays[\"hotspot\"] = pyLife_nodes[\"hotspot\"].values\n",
     "mesh.plot(scalars=\"hotspot\",log_scale = False, off_screen=True)"
