--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -2,13 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Wöhler analyzing tool\n",
     "Developed by Mustapha Kassem in scope of a master thesis at TU München"
@@ -16,26 +10,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Pylife Woehler-curve evaluation script"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Initialization"
    ]
@@ -43,14 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -71,14 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from __future__ import print_function\n",
@@ -91,13 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Data import\n",
     "#### Data is made up of two columns:\n",
@@ -109,14 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "file_name = 'data/woehler/fatigue-data-plain.csv'\n"
@@ -124,13 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "source": [
     "##### Transforming data in csv to python arrays"
    ]
@@ -138,14 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "data = pd.read_csv(file_name, sep='\\t')\n",
@@ -155,13 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "#### 2. Enter the load cycle limit (The load-cycle value that seperates Fractures from Run-outs):\n",
     "##### Note: in case the load cycle limit is the highest number found in the column set it to *max(data[:,1])*"
@@ -170,14 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "autoscroll": false,
-    "ein.hycell": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "ld_cyc_lim = None\n",
@@ -188,26 +117,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Parameters"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "source": [
     "#### 3. Fill in the fixed parameter values. \n",
     "#### The empty parameters are the ones to be estimated.\n",
@@ -226,16 +143,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "## Visualization of Results\n",
-    "#### 4. Choose the plot type to be visualized in the following cell"
+    "### 4. Choose the plot type to be visualized in the following cell"
    ]
   },
   {
@@ -251,15 +162,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "-"
-    }
-   },
+   "metadata": {},
    "source": [
-    "#### 5. Choose the probability curve type to be visualized in the following cell"
+    "### 5. Choose the probability curve type to be visualized in the following cell"
    ]
   },
   {
@@ -281,13 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "collapsed": false,
-    "ein.tags": "worksheet-0",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Final Woehler-curve plot\n",
     "#### 6. Plot of the complete Woehler curve.\n",
@@ -318,18 +217,8 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "argv": [
-    "/home/jmu3si/Devel/pylife/.venv/bin/python",
-    "-m",
-    "ipykernel_launcher",
-    "-f",
-    "{connection_file}"
-   ],
    "display_name": "Python 3",
-   "env": null,
-   "interrupt_mode": "signal",
    "language": "python",
-   "metadata": null,
    "name": "python3"
   },
   "language_info": {
