Update demos to use the new vtk interface
Signed-off-by: Johannes Mueller <johannes.mueller4@de.bosch.com>

--- a/demos/VMAP_io.ipynb
+++ b/demos/VMAP_io.ipynb
@@ -20,11 +20,12 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import pylife.vmap\n",
+    "import pylife.mesh.meshsignal\n",
     "import pylife.stress.equistress\n",
     "import pyvista as pv\n",
     "\n",
     "pv.set_plot_theme('document')\n",
-    "pv.set_jupyter_backend('ipygany')"
+    "pv.set_jupyter_backend('panel')"
    ]
   },
   {
@@ -42,13 +43,6 @@
    "source": [
     "vm_mesh = pylife.vmap.VMAPImport(\"plate_with_hole.vmap\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -77,9 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## We will use Pyvista for plotting FEM in the future\n",
-    "\n",
-    "still work in progress, sorry dudes"
+    "## Plotting the structure using pyVista"
    ]
   },
   {
@@ -88,30 +80,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "pyLife_nodes = pyLife_mesh[['x', 'y', 'z', 'mises']].groupby('node_id').mean()\n",
-    "mesh = pv.PolyData(pyLife_nodes[['x', 'y', 'z']].values)\n",
-    "mesh.point_arrays[\"mises\"] = pyLife_nodes[\"mises\"].values\n",
-    "mesh.plot(scalars=\"mises\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### if you are using jupyter-lab you can use some lines, too:\n",
-    "for more information see here: https://pyvista-doc.readthedocs.io/en/latest/plotting/itk_plotting.html"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pl = pv.PlotterITK()\n",
-    "pl.add_mesh(mesh, scalars=\"mises\", smooth_shading=True)\n",
-    "pl.show(True)"
+    "grid = pv.UnstructuredGrid(*pyLife_mesh.mesh.vtk_data())\n",
+    "plotter = pv.Plotter(window_size=[1920, 1080])\n",
+    "plotter.add_mesh(grid, scalars=pyLife_mesh.groupby('element_id')['mises'].mean().to_numpy(),\n",
+    "                show_edges=True, cmap='jet')\n",
+    "plotter.add_scalar_bar()\n",
+    "plotter.show()"
    ]
   },
   {
