--- a/demos/hotspot_plate.ipynb
+++ b/demos/hotspot_plate.ipynb
@@ -28,13 +28,14 @@
     "import scipy.stats as stats\n",
     "import pylife.stress.equistress\n",
     "import pylife.strength.meanstress\n",
+    "import pylife.mesh.meshsignal\n",
     "import pylife.mesh.hotspot\n",
     "import pylife.vmap\n",
     "\n",
     "import pyvista as pv\n",
     "\n",
     "pv.set_plot_theme('document')\n",
-    "pv.set_jupyter_backend('ipygany')"
+    "pv.set_jupyter_backend('panel')"
    ]
   },
   {
@@ -100,11 +101,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plotting using pyvista\n",
-    "pyLife_nodes = pyLife_mesh[['x', 'y', 'z', 'hotspot']].groupby('node_id').mean()\n",
-    "mesh = pv.PolyData(pyLife_nodes[['x', 'y', 'z']].values)\n",
-    "mesh.point_arrays[\"hotspot\"] = pyLife_nodes[\"hotspot\"].values\n",
-    "mesh.plot(scalars=\"hotspot\",log_scale = False, off_screen=True)"
+    "grid = pv.UnstructuredGrid(*pyLife_mesh.mesh.vtk_data())\n",
+    "plotter = pv.Plotter(window_size=[1920, 1080])\n",
+    "plotter.add_mesh(grid, scalars=pyLife_mesh.groupby('element_id')['hotspot'].first().to_numpy(),\n",
+    "                show_edges=True, cmap='prism_r')\n",
+    "plotter.add_scalar_bar()\n",
+    "plotter.show()"
    ]
   },
   {
