--- a/demos/lifetime_calc.ipynb
+++ b/demos/lifetime_calc.ipynb
@@ -55,7 +55,7 @@
     "\n",
     "from pylife.materialdata.woehler.diagrams.woehler_curve_diagrams import WoehlerCurveDiagrams\n",
     "\n",
-    "import pylife.mesh.meshplot\n",
+    "import pylife.mesh.meshsignal\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import Axes3D\n",
     "from matplotlib import cm\n",
@@ -75,7 +75,7 @@
     "%matplotlib inline\n",
     "\n",
     "pv.set_plot_theme('document')\n",
-    "pv.set_jupyter_backend('ipygany')"
+    "pv.set_jupyter_backend('panel')"
    ]
   },
   {
@@ -678,11 +678,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plotting using pyvista\n",
-    "pyLife_nodes = pyLife_mesh.groupby('node_id').mean()\n",
-    "mesh = pv.PolyData(pyLife_nodes[['x', 'y', 'z']].values)\n",
-    "mesh.point_arrays[\"d\"] = pyLife_nodes[\"d\"].values\n",
-    "mesh.plot(scalars=\"d\",log_scale = True)"
+    "grid = pv.UnstructuredGrid(*pyLife_mesh.mesh.vtk_data())\n",
+    "plotter = pv.Plotter(window_size=[1920, 1080])\n",
+    "plotter.add_mesh(grid, scalars=pyLife_mesh.groupby('element_id')['mises'].mean().to_numpy(),\n",
+    "                show_edges=True, cmap='jet')\n",
+    "plotter.add_scalar_bar()\n",
+    "plotter.show()"
    ]
   },
   {
