--- a/demos/woehler_analyzer.ipynb
+++ b/demos/woehler_analyzer.ipynb
@@ -9,52 +9,34 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Pylife Woehler-curve evaluation script"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Initialization"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import copy\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from os import path\n",
-    "import sys, os\n",
-    "import json\n",
+    "import plotly.express as px\n",
+    "import plotly.graph_objects as go\n",
     "\n",
-    "import pylife.materialdata.woehler as woehler\n",
-    "import pylife.utils.diagrams.probability_data as probdiagram\n",
-    "from pylife.materialdata.woehler.controls.data_file_display import DataFileDisplay\n",
-    "from pylife.materialdata.woehler.controls.woehler_curve_analyzer_options import  WoehlerCurveAnalyzerOptions\n",
-    "from pylife.materialdata.woehler.controls.woehler_curve_data_plotter import  WoehlerCurveDataPlotter\n",
-    "from pylife.materialdata.woehler.controls.whole_woehler_curve_plotter import  WholeWoehlerCurvePlotter\n",
-    "from pylife.materialdata.woehler.diagrams.woehler_curve_diagrams import WoehlerCurveDiagrams\n"
+    "from pylife.materialdata import woehler"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from __future__ import print_function\n",
-    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-    "import ipywidgets as widgets\n",
-    "from IPython.display import display\n",
-    "import warnings\n",
-    "import pdb"
+    "The Wölhler analysis module takes fatigue data, i. e. values of the form `cycles` `load` `fracture` that have been measured by a fatigue testing lab and analyze it to return the parameters of a Wöhler curve. \n",
+    "\n",
+    "These are:\n",
+    "* the slope `k_1`\n",
+    "* the cycle number of the endurance limit `ND`\n",
+    "* the load level of the endurance limit `SD`\n",
+    "* the scatter line cycle (lifetime) direction `TN`\n",
+    "* the scatter in load direction `TS`\n",
+    "\n",
+    "We will see several methods to perform the analysis below."
    ]
   },
   {
@@ -78,10 +60,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv(file_name, sep='\\t')\n",
+    "df.columns=['load', 'cycles']\n",
+    "px.scatter(df, x='cycles', y='load', log_x=True, log_y=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Transforming data in csv to python arrays"
+    "## Guessing the fractures"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this case there is no information if the specimen was a runout or a fracture. We can guess it based on the value for the `load_cycle_limit` which defaults to `1e7`."
    ]
   },
   {
@@ -90,17 +90,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = pd.read_csv(file_name, sep='\\t')\n",
-    "data.columns=['load', 'cycles']\n",
-    "rb = DataFileDisplay(data)"
+    "load_cycle_limit = None # or for example 1e7\n",
+    "df = woehler.determine_fractures(df, load_cycle_limit)\n",
+    "px.scatter(df, x='cycles', y='load', color='fracture', log_x=True, log_y=True)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2. Enter the load cycle limit (The load-cycle value that seperates Fractures from Run-outs):\n",
-    "##### Note: in case the load cycle limit is the highest number found in the column set it to *max(data[:,1])*"
+    "# Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Preparations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Before we do the actual analysis, we make some preparations like, guessing the initial `fatigue_limit`, distinguishing between `runouts` and `fractures` and between `infinite_zone` and `finite_zone`."
    ]
   },
   {
@@ -109,26 +122,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ld_cyc_lim = None\n",
-    "data = woehler.determine_fractures(data, ld_cyc_lim)\n",
-    "data\n",
-    "fatigue_data = data.fatigue_data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Parameters"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 3. Fill in the fixed parameter values. \n",
-    "#### The empty parameters are the ones to be estimated.\n",
-    "##### Note: fixing parameters are only applicable for method maximum likelihood 5 params"
+    "fatigue_data = df.fatigue_data\n",
+    "go.Figure([\n",
+    "    go.Scatter(x=fatigue_data.finite_zone.cycles, y=fatigue_data.finite_zone.load, mode='markers', name='finite'),\n",
+    "    go.Scatter(x=fatigue_data.infinite_zone.cycles, y=fatigue_data.infinite_zone.load, mode='markers', name='infinite'),\n",
+    "    go.Scatter(x=[df.cycles.min(), df.cycles.max()], y=[fatigue_data.fatigue_limit]*2, mode='lines', name='fatigue limit')\n",
+    "]).update_xaxes(type='log').update_yaxes(type='log').update_layout(xaxis_title='Cycles', yaxis_title='Load')"
    ]
   },
   {
@@ -137,16 +136,68 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fatigue_data = df.fatigue_data\n",
+    "fig = go.Figure([\n",
+    "    go.Scatter(x=fatigue_data.fractures.cycles, y=fatigue_data.fractures.load, mode='markers', name='fractures'),\n",
+    "    go.Scatter(x=fatigue_data.runouts.cycles, y=fatigue_data.runouts.load, mode='markers', name='runouts'),\n",
+    "    go.Scatter(x=[df.cycles.min(), df.cycles.max()], y=[fatigue_data.fatigue_limit]*2, mode='lines', name='fatigue limit')\n",
+    "]).update_xaxes(type='log').update_yaxes(type='log').update_layout(xaxis_title='Cycles', yaxis_title='Load')\n",
+    "fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Elementary\n",
     "\n",
-    "woehler_curve_analyzer_options = WoehlerCurveAnalyzerOptions(fatigue_data)\n"
+    "The `Elementary` analysis is the first step of the analysis. It determines the slope `k_1` in the finite region and the scatter in cycle region `TN` using the pearl chain method.\n",
+    "\n",
+    "The endurance limit in load direction `SN` is guessed from the tentative fatigue limit. The scatter in load direction `TS` is transformed from `TN` using the slope `k_1`.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "elementary_result = woehler.Elementary(fatigue_data).analyze()\n",
+    "elementary_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wc = elementary_result.woehler\n",
+    "\n",
+    "cycles = np.logspace(np.log10(df.cycles.min()), np.log10(df.cycles.max()), 100)\n",
+    "elementary_fig = copy.deepcopy(fig)\n",
+    "\n",
+    "elementary_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles), mode='lines', name='Elementary 50%')\n",
+    "elementary_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles, failure_probability=0.1), \n",
+    "                           mode='lines', name='Elementary 10%')\n",
+    "elementary_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles, failure_probability=0.9), \n",
+    "                           mode='lines', name='Elementary 90%')\n",
+    "\n",
+    "elementary_fig"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Visualization of Results\n",
-    "### 4. Choose the plot type to be visualized in the following cell"
+    "### Probit\n"
    ]
   },
   {
@@ -155,42 +206,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "woehler_curve = woehler_curve_analyzer_options.woehler_curve\n",
-    "analyzer = woehler_curve_analyzer_options.analyzer()\n",
-    "woehler_curve_data_plotter = WoehlerCurveDataPlotter(woehler_curve, fatigue_data, analyzer)"
+    "probit_result = woehler.Probit(fatigue_data).analyze()\n",
+    "probit_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wc = probit_result.woehler\n",
+    "\n",
+    "cycles = np.logspace(np.log10(df.cycles.min()), np.log10(df.cycles.max()), 100)\n",
+    "probit_fig = copy.deepcopy(fig)\n",
+    "probit_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles), mode='lines', name='Probit 50%')\n",
+    "probit_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles, failure_probability=0.1), mode='lines', name='Probit 10%')\n",
+    "probit_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles, failure_probability=0.9), mode='lines', name='Probit 90%')\n",
+    "\n",
+    "probit_fig"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. Choose the probability curve type to be visualized in the following cell"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "probdiag_finite = probdiagram.ProbabilityDataDiagram(analyzer.pearl_chain_estimator(),\n",
-    "                                                    occurrences_name='Load',\n",
-    "                                                    title='Failure probability finite')\n",
-    "probdiag_finite.plot()\n",
-    "if isinstance(analyzer, woehler.analyzers.probit.Probit):\n",
-    "    probdiag_infinite = probdiagram.ProbabilityDataDiagram(analyzer.pearl_chain_estimator(),\n",
-    "                                                        occurrences_name='Load',\n",
-    "                                                        title='Failure probability inffinite')\n",
-    "    probdiag_infinite.plot()\n"
+    "### Maximum Likelihood Infinite"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Final Woehler-curve plot\n",
-    "#### 6. Plot of the complete Woehler curve.\n",
-    "#### Choose the value of $k_2$ to plot the figure."
+    "The Maximum Likelihood Infinite method takes the parameters for the finite regime fitted by `Elementary` (`k_1`, `TN`) and fits the ones for the infinite regime (`SD`, `ND`, `TS`), hence the name."
    ]
   },
   {
@@ -199,9 +247,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "whole_woehler_curve_plotter = WoehlerCurveDiagrams(woehler_curve, fatigue_data, analyzer)\n",
-    "whole_woehler_curve_plotter.plot_fatigue_data()\n",
-    "whole_woehler_curve_plotter.plot_fitted_curve(k_2=12)"
+    "maxlike_inf_result = woehler.MaxLikeInf(fatigue_data).analyze()\n",
+    "maxlike_inf_result"
    ]
   },
   {
@@ -210,14 +257,109 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(woehler_curve)"
+    "wc = maxlike_inf_result.woehler\n",
+    "\n",
+    "cycles = np.logspace(np.log10(df.cycles.min()), np.log10(df.cycles.max()), 100)\n",
+    "maxlike_inf_fig = copy.deepcopy(fig)\n",
+    "maxlike_inf_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles), mode='lines', name='MaxLikeInf 50%')\n",
+    "maxlike_inf_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles, failure_probability=0.1), mode='lines', name='MaxLikeInf 10%')\n",
+    "maxlike_inf_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles, failure_probability=0.9), mode='lines', name='MaxLikeInf 90%')\n",
+    "\n",
+    "maxlike_inf_fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Maximum Likelihood Full"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The Maximum Likelihood Full method just takes the elementary result as starting values but fits all the parameters."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "maxlike_full_result = woehler.MaxLikeFull(fatigue_data).analyze()\n",
+    "maxlike_full_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wc = maxlike_full_result.woehler\n",
+    "\n",
+    "cycles = np.logspace(np.log10(df.cycles.min()), np.log10(df.cycles.max()), 100)\n",
+    "maxlike_full_fig = copy.deepcopy(fig)\n",
+    "maxlike_full_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles), mode='lines', name='MaxLikeFull 50%')\n",
+    "maxlike_full_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles, failure_probability=0.1), mode='lines', name='MaxLikeFull 10%')\n",
+    "maxlike_full_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles, failure_probability=0.9), mode='lines', name='MaxLikeFull 90%')\n",
+    "\n",
+    "maxlike_full_fig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Maximum Likelihood Full with fixed parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Sometimes it is desirable to pin one or more parameters of the Wöhler curve to a predefined value based on assumptions of the Wöhler curve. You can archive that by handing the fixed parameters to the `MaxLikeFull` object using the `fixed_parameters` argument."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fixed_parameters = {\n",
+    "    'k_1': 7.,\n",
+    "    'ND': 1e6\n",
+    "}\n",
+    "\n",
+    "maxlike_fixed_result = woehler.MaxLikeFull(fatigue_data).analyze(fixed_parameters=fixed_parameters)\n",
+    "maxlike_fixed_result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wc = maxlike_fixed_result.woehler\n",
+    "\n",
+    "cycles = np.logspace(np.log10(df.cycles.min()), np.log10(df.cycles.max()), 100)\n",
+    "maxlike_fixed_fig = copy.deepcopy(fig)\n",
+    "maxlike_fixed_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles), mode='lines', name='MaxLikefixed 50%')\n",
+    "maxlike_fixed_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles, failure_probability=0.1), mode='lines', name='MaxLikeFixed 10%')\n",
+    "maxlike_fixed_fig.add_scatter(x=cycles, y=wc.basquin_load(cycles, failure_probability=0.9), mode='lines', name='MaxLikeFixed 90%')\n",
+    "\n",
+    "maxlike_fixed_fig"
    ]
   }
  ],
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -230,8 +372,7 @@
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "pygments_lexer": "ipython3"
   },
   "name": "woehler_analyzer.ipynb"
  },
